--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,24 @@
-services:
-  - type: web
-    name: yep-stock-scanner
-    runtime: python
-    plan: starter
-    buildCommand: pip install -r requirements-web.txt
-    startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
-    envVars:
-      - key: POLYGON_API_KEY
+# Exported from Render on 2026-02-20T05:47:01Z
+version: "1"
+projects:
+- name: My project
+  environments:
+  - name: Production
+    services:
+    - type: web
+      name: yep
+      runtime: elixir
+      repo: https://github.com/jamiewoolner-svg/yep
+      plan: starter
+      envVars:
+      - key: POLYGON_MIN_GAP_SEC
         sync: false
       - key: SCANNER_DATA_SOURCE
-        value: polygon
-      - key: POLYGON_MIN_GAP_SEC
-        value: "0.4"
+        sync: false
+      - key: POLYGON_API_KEY
+        sync: false
+      region: oregon
+      buildCommand: pip install -r requirements-web.txt
+      startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads
+        4 --timeout 300
+      autoDeployTrigger: commit
