--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ projects:
     services:
     - type: web
       name: yep
-      runtime: python
+      runtime: elixir
       repo: https://github.com/jamiewoolner-svg/yep
       plan: starter
       envVars:
@@ -21,5 +21,4 @@ projects:
       buildCommand: pip install -r requirements-web.txt
       startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads
         4 --timeout 300
-      healthCheckPath: /healthz
       autoDeployTrigger: commit
