Set Render blueprint runtime to python

--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ projects:
     services:
     - type: web
       name: yep
-      runtime: elixir
+      runtime: python
       repo: https://github.com/jamiewoolner-svg/yep
       plan: starter
       envVars:
