--- a/render.yaml
+++ b/render.yaml
@@ -19,7 +19,6 @@ projects:
         sync: false
       region: oregon
       buildCommand: pip install -r requirements-web.txt
-      startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads
-        4 --timeout 300
+      startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300
       healthCheckPath: /healthz
       autoDeployTrigger: commit
