--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: starter
     region: oregon
     buildCommand: pip install -r requirements-web.txt
-    startCommand: python3 -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
     healthCheckPath: /healthz
     autoDeploy: true
     envVars:
