--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,10 @@ services:
     plan: starter
     region: oregon
     buildCommand: pip install -r requirements-web.txt
-    startCommand: /opt/render/project/src/.venv/bin/gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
     healthCheckPath: /healthz
     autoDeploy: true
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.11
       - key: POLYGON_MIN_GAP_SEC
         sync: false
       - key: SCANNER_DATA_SOURCE
